# poorentropy

./: Cargo.toml  LICENSE  README.md  test-all-targets
benches/: poorentropy_bench.rs
src/: iter.rs  lib.rs  rng.rs
testgen/: Cargo.toml
testgen/src/: main.rs
