[package]
name = "poorentropy"
version = "0.1.0"
edition = "2021"
license = "BSD-2-Clause"
authors = ["Andrea Corbellini <corbellini.andrea@gmail.com>"]

description = "Low-quality entropy generator for no_std crates"
repository = "https://github.com/andreacorbellini/poorentropy"

keywords = ["entropy", "random", "no-std"]
categories = ["algorithms", "no-std"]

[dependencies]
rand_core = { version = "0.9.3", optional = true }

[dev-dependencies]
criterion = { version = "0.6.0" }
rand = { version = "0.9.1", default-features = false, features = ["small_rng"] }

[[bench]]
name = "poorentropy_bench"
harness = false
