[package]
name = "poorentropy"
version = "0.3.0"
edition = "2024"
rust-version = "1.86.0"
license = "BSD-2-Clause"
authors = ["Andrea Corbellini <corbellini.andrea@gmail.com>"]

description = "Low-quality entropy generator for no_std crates"
repository = "https://github.com/andreacorbellini/poorentropy"

keywords = ["entropy", "random", "no-std"]
categories = ["algorithms", "no-std"]

[dependencies]
rand_core = { version = "0.10.1", optional = true }

[dev-dependencies]
criterion = { version = "0.8.2" }
rand = { version = "0.10.1", default-features = false }

[[bench]]
name = "poorentropy_bench"
harness = false

[package.metadata.docs.rs]
all-features = true
